2008-11-12  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Simon Hausmann.

        Inital implementation of PluginPackage and PluginView for Mac NPAPI support in WebCore

        Currently only used by QtWebKit. See also:

        https://bugs.webkit.org/show_bug.cgi?id=21427

        * WebCore.pro:
        * platform/qt/TemporaryLinkStubs.cpp:
        (PluginView::userAgentStatic):
        (PluginView::getValueStatic):
        * plugins/PluginView.cpp:
        (WebCore::PluginView::handleEvent):
        (WebCore::PluginView::setValue):
        (WebCore::PluginView::PluginView):
        * plugins/PluginView.h:
        (WebCore::PluginView::setPlatformPluginWidget):
        * plugins/mac/PluginPackageMac.cpp: Added.
        (WebCore::PluginPackage::determineQuirks):
        (WebCore::readPListFile):
        (WebCore::stringListFromResourceId):
        (WebCore::PluginPackage::fetchInfo):
        (WebCore::PluginPackage::load):
        (WebCore::PluginPackage::hash):
        (WebCore::PluginPackage::equal):
        (WebCore::PluginPackage::compareFileVersion):
        * plugins/mac/PluginViewMac.cpp: Added.
        (WebCore::nativeWindowFor):
        (WebCore::cgHandleFor):
        (WebCore::topLevelOffsetFor):
        (WebCore::PluginView::init):
        (WebCore::PluginView::~PluginView):
        (WebCore::PluginView::stop):
        (WebCore::PluginView::getValueStatic):
        (WebCore::PluginView::getValue):
        (WebCore::PluginView::setParent):
        (WebCore::PluginView::show):
        (WebCore::PluginView::hide):
        (WebCore::PluginView::setFocus):
        (WebCore::PluginView::setParentVisible):
        (WebCore::PluginView::setNPWindowRect):
        (WebCore::PluginView::setNPWindowIfNeeded):
        (WebCore::PluginView::updatePluginWidget):
        (WebCore::PluginView::paint):
        (WebCore::PluginView::invalidateRect):
        (WebCore::PluginView::invalidateRegion):
        (WebCore::PluginView::forceRedraw):