@@ -48,8 +48,6 @@
 
 namespace WebCore {
 
-static const double cAnimationTimerDelay = 0.025;
-
 // The epsilon value we pass to UnitBezier::solve given that the animation is going to run over |dur| seconds. The longer the
 // animation, the more precision we need in the timing function result to avoid ugly discontinuities.
 static inline double solveEpsilon(double duration)
@@ -382,7 +380,6 @@ static void ensurePropertyMap()
 
 AnimationBase::AnimationBase(const Animation* transition, RenderObject* renderer, CompositeAnimation* compAnim)
     : m_animState(AnimationStateNew)
-    , m_iteration(0)
     , m_isAnimating(false)
     , m_waitedForResponse(false)
     , m_startTime(0)
@@ -483,7 +480,7 @@ double AnimationBase::duration() const
 
 bool AnimationBase::playStatePlaying() const
 {
-    return m_animation && m_animation->playState() == AnimPlayStatePlaying;
+    return m_animation->playState() == AnimPlayStatePlaying;
 }
 
 bool AnimationBase::animationsMatch(const Animation* anim) const
